--- a/advice-generator/package.json
+++ b/advice-generator/package.json
@@ -11,8 +11,7 @@
   ],
   "scripts": {
     "build:css": "postcss src/css/style.css --dir dist/css",
-    "watch:css": "postcss src/css/style.css --dir dist/css -w",
-    "start": "browser-sync start -s --port 5000 -w"
+    "watch:css": "postcss src/css/style.css --dir dist/css -w"
   },
   "prettier": {
     "arrowParens": "avoid",
@@ -39,7 +38,6 @@
   "license": "MIT",
   "devDependencies": {
     "autoprefixer": "^10.4.13",
-    "browser-sync": "^2.27.10",
     "cssnano": "^5.1.14",
     "postcss": "^8.4.19",
     "postcss-cli": "^10.1.0",
